added Swagger support, demo swagger doc code in docs handler
